--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,22 @@
 Django==1.4.2
-distribute==0.6.24
+South==0.7.6
+amqplib==1.0.2
+anyjson==0.3.3
+billiard==2.7.3.17
+celery==3.0.11
+distribute==0.6.30
 dj-database-url==0.2.1
+django-sse==0.4.1
+gevent==0.13.8
+gevent-socketio==0.3.5-rc2
+gevent-websocket==0.3.6
+greenlet==0.4.0
+gunicorn==0.15.0
+ipython==0.13.1
+kombu==2.4.8
 psycopg2==2.4.5
+python-dateutil==2.1
+redis==2.7.1
+six==1.2.0
+sse==1.2
 wsgiref==0.1.2
