--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ greenlet==0.4.0
 gunicorn==0.15.0
 ipython==0.13.1
 kombu==2.4.8
-nose=1.2.1
+nose==1.2.1
 psycopg2==2.4.5
 python-dateutil==2.1
 redis==2.7.1
