--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,70 @@
-Django==1.4.2
-South==0.7.6
-amqplib==1.0.2
-anyjson==0.3.3
-billiard==2.7.3.17
-celery==3.0.11
-distribute==0.6.30
-dj-database-url==0.2.1
-django-nose==1.1
-django-sse==0.4.1
-gevent==0.13.8
-gevent-socketio==0.3.5-rc2
-gevent-websocket==0.3.6
-greenlet==0.4.0
-gunicorn==0.15.0
-ipython==0.13.1
-kombu==2.4.8
-nose==1.2.1
-psycopg2==2.4.5
-python-dateutil==2.1
-redis==2.7.1
-selenium==2.25.0
-six==1.2.0
-sse==1.2
+Brlapi==0.5.6
+GnuPGInterface==0.3.2
+Mako==0.5.0
+MarkupSafe==0.15
+PAM==0.4.2
+PIL==1.1.7
+Twisted-Core==11.1.0
+Twisted-Names==11.1.0
+Twisted-Web==11.1.0
+adium-theme-ubuntu==0.3.2
+apt-xapian-index==0.44
+apturl==0.5.1ubuntu3
+argparse==1.2.1
+ccsm==0.9.5.92
+chardet==2.0.1
+command-not-found==0.2.44
+compizconfig-python==0.9.5.94
+configglue==1.0
+debtagshw==0.1
+defer==1.0.2
+dirspec==3.0.0
+distribute==0.6.28
+duplicity==0.6.18
+httplib2==0.7.2
+jockey==0.9.7
+keyring==0.7.1
+language-selector==0.1
+launchpadlib==1.9.12
+lazr.restfulclient==0.12.0
+lazr.uri==1.0.3
+louis==2.3.0
+nvidia-common==0.0.0
+oauth==1.0.1
+onboard==0.97.1
+oneconf==0.2.8.1
+pexpect==2.3
+piston-mini-client==0.7.2
+protobuf==2.4.1
+pyOpenSSL==0.12
+pycrypto==2.4.1
+pycups==1.9.61
+pycurl==7.19.0
+pyinotify==0.9.2
+pyserial==2.5
+pysmbc==1.0.13
+python-apt==0.8.3ubuntu7
+python-dateutil==1.5
+python-debian==0.1.21ubuntu1
+python-virtkey==0.60.0
+pyxdg==0.19
+reportlab==2.5
+rhythmbox-ubuntuone==3.0.0
+sessioninstaller==0.0.0
+simplejson==2.3.2
+software-center-aptd-plugins==0.0.0
+system-service==0.1.6
+ubuntuone-couch==0.3.0
+ubuntuone-installer==3.0.2
+ubuntuone-storage-protocol==3.0.2
+ufw==0.31.1-1
+unattended-upgrades==0.1
+unity-lens-video==0.3.5
+unity-scope-video-remote==0.3.5
+usb-creator==0.2.23
+virtualenv==1.8.2
+wadllib==1.3.0
 wsgiref==0.1.2
+xdiagnose==2.5.2ubuntu0.1
+xkit==0.0.0
+zope.interface==3.6.1
