--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ argparse==1.2.1
 distribute==0.6.28
 dj-database-url==0.2.1
 django-nose==1.1
+gevent==0.13.8
+greenlet==0.4.0
 gunicorn==0.15.0
 nose==1.2.1
 psycopg2==2.4.5
